--- a/themes/navy/source/css/_partial/header.styl
+++ b/themes/navy/source/css/_partial/header.styl
@@ -20,6 +20,13 @@ logo-size = 50px
 
 #logo-wrap
   flex: 0 logo-size
+  margin-top: -5px
+
+.logo-title
+  color:white
+  text-decoration:none
+  font-size:25px
+  font-weight:600
 
 #logo
   hide-text()
