update home page

--- a/source/index.pug
+++ b/source/index.pug
@@ -9,35 +9,35 @@ ul#intro-feature-list
       .intro-feature-icon
         i.fa.fa-street-view
       h3.intro-feature-title
-        a(href='/docs/overview.html') Basics
+        a(href='/docs/basic_data_struct.html') Data Struct
       p.intro-feature-desc Installation, Hello World, Cargo, Crates, Variable bindings, Functions, Primitive Data Types, Operators & Control Flows.
   li.intro-feature-wrap
     .intro-feature
       .intro-feature-icon
         i.fa.fa-road
       h3.intro-feature-title
-        a(href='/docs/b1.vectors.html') Beyond the Basics
+        a(href='/docs/data_conversion.html') Data Conversion
       p.intro-feature-desc Vectors, Structs, Enums, Generics, Impls & Traits.
   li.intro-feature-wrap
     .intro-feature
       .intro-feature-icon
         i.fa.fa-plane
       h3.intro-feature-title
-        a(href='/docs/c1.ownership.html') The Tough Part
+        a(href='/docs/spatial_calculation.html') Spatial Calculation
       p.intro-feature-desc Ownership, Borrowing, Lifetimes & Lifetime Elision.
   li.intro-feature-wrap
     .intro-feature
       .intro-feature-icon
         i.fa.fa-space-shuttle
       h3.intro-feature-title
-        a(href='/docs/d1.code_organization.html') Let's Get It Started
+        a(href='/docs/grid_analysis.html') Grid Analysis
       p.intro-feature-desc Modules, Crates, Workspaces, std modules and Preludes.
   li.intro-feature-wrap
     .intro-feature
       .intro-feature-icon
         i.fa.fa-user-astronaut
       h3.intro-feature-title
-        a(href='/docs/e1.smart_compiler.html') Error Handling
+        a(href='/docs/cluster_analysis.html') Cluster Analysis
       p.intro-feature-desc Smart compiler, Panicking, Option & Result, Unwrap & Expect, Error & None propagation, Combinators and Custom Error Types.
   li.intro-feature-wrap
     .intro-feature
