--- a/source/zh_CN/index.pug
+++ b/source/zh_CN/index.pug
@@ -9,35 +9,35 @@ ul#intro-feature-list
       .intro-feature-icon
         i.fa.fa-street-view
       h3.intro-feature-title
-        a(href='/docs/overview.html') 基本
+        a(href='/zh_CN/docs/basic_data_struct.html') 数据结构
       p.intro-feature-desc 安装, Hello World, Cargo, Crates, Variable bindings, Functions, Primitive Data Types, Operators & Control Flows.
   li.intro-feature-wrap
     .intro-feature
       .intro-feature-icon
         i.fa.fa-road
       h3.intro-feature-title
-        a(href='/docs/b1.vectors.html') Beyond the Basics
+        a(href='/zh_CN/docs/data_conversion.html') 数据转换
       p.intro-feature-desc Vectors, Structs, Enums, Generics, Impls & Traits.
   li.intro-feature-wrap
     .intro-feature
       .intro-feature-icon
         i.fa.fa-plane
       h3.intro-feature-title
-        a(href='/docs/c1.ownership.html') The Tough Part
+        a(href='/zh_CN/docs/spatial_calculation.html') 空间计算
       p.intro-feature-desc Ownership, Borrowing, Lifetimes & Lifetime Elision.
   li.intro-feature-wrap
     .intro-feature
       .intro-feature-icon
         i.fa.fa-space-shuttle
       h3.intro-feature-title
-        a(href='/docs/d1.code_organization.html') Let's Get It Started
+        a(href='/zh_CN/docs/grid_analysis.html') 格网分析
       p.intro-feature-desc Modules, Crates, Workspaces, std modules and Preludes.
   li.intro-feature-wrap
     .intro-feature
       .intro-feature-icon
         i.fa.fa-user-astronaut
       h3.intro-feature-title
-        a(href='/docs/e1.smart_compiler.html') Error Handling
+        a(href='/zh_CN/docs/cluster_analysis.html') 聚类分析
       p.intro-feature-desc Smart compiler, Panicking, Option & Result, Unwrap & Expect, Error & None propagation, Combinators and Custom Error Types.
   li.intro-feature-wrap
     .intro-feature
