updata zh_CN index

--- a/source/zh_CN/index.pug
+++ b/source/zh_CN/index.pug
@@ -10,14 +10,14 @@ ul#intro-feature-list
         i.fa.fa-street-view
       h3.intro-feature-title
         a(href='/zh_CN/docs/basic_data_struct.html') 数据结构
-      p.intro-feature-desc 安装, Hello World, Cargo, Crates, Variable bindings, Functions, Primitive Data Types, Operators & Control Flows.
+      p.intro-feature-desc 支持OGC中所有的空间数据类型,Point and MultiPoint、LineString and MultiLineString、Polygon and MultiPolygon、heterogeneous GeometryCollection.
   li.intro-feature-wrap
     .intro-feature
       .intro-feature-icon
         i.fa.fa-road
       h3.intro-feature-title
         a(href='/zh_CN/docs/data_conversion.html') 数据转换
-      p.intro-feature-desc Vectors, Structs, Enums, Generics, Impls & Traits.
+      p.intro-feature-desc 包括wkt,geojson,geometry之间的互相转换。
   li.intro-feature-wrap
     .intro-feature
       .intro-feature-icon
@@ -31,18 +31,18 @@ ul#intro-feature-list
         i.fa.fa-space-shuttle
       h3.intro-feature-title
         a(href='/zh_CN/docs/grid_analysis.html') 格网分析
-      p.intro-feature-desc Modules, Crates, Workspaces, std modules and Preludes.
+      p.intro-feature-desc 将给定区域划分为网格，其中包括正方形网格和六边形网格。
   li.intro-feature-wrap
     .intro-feature
       .intro-feature-icon
         i.fa.fa-user-astronaut
       h3.intro-feature-title
         a(href='/zh_CN/docs/cluster_analysis.html') 聚类分析
-      p.intro-feature-desc Smart compiler, Panicking, Option & Result, Unwrap & Expect, Error & None propagation, Combinators and Custom Error Types.
+      p.intro-feature-desc 支持K-Means、DBScan等聚类算法。
   li.intro-feature-wrap
     .intro-feature
       .intro-feature-icon
         i.fa.fa-meteor
       h3.intro-feature-title
-        a(href='#') Stay tuned!
-      p.intro-feature-desc More things are coming in 2021. Stay in touch!
+        a(href='#') 更多功能尽情期待!
+      p.intro-feature-desc 在2021年我们会支持更多的功能，尽请期待!
