--- a/themes/navy/source/css/_partial/header.styl
+++ b/themes/navy/source/css/_partial/header.styl
@@ -3,7 +3,7 @@ header-padding-max = 30px
 logo-size = 50px
 
 #header-outer
-  background: bg-dark
+  background: #0E032E
 
 #header
   position: relative
