--- a/themes/navy/source/css/_partial/index.styl
+++ b/themes/navy/source/css/_partial/index.styl
@@ -1,25 +1,27 @@
 #banner-outer
-  background: bg-dark
+  background-image: url("/images/banner.jpg")
 
 #banner
   color: rgba(255, 255, 255, 0.8)
   text-align: center
 
 #banner-title
-  padding-top: 20px
-  padding-bottom: 20px
+  padding: 20px 160px 0 160px;
+  color:#fff;
   font-size: 40px
   line-height: 1.15
-  font-weight: 300
+  font-weight: 600
+  text-align:left
   font-family: font-title
   @media mq-normal
     padding-top: 100px
-    padding-bottom: 100px
+    padding-bottom: 80px
     font-size: 50px
 
 #banner-share
   display: none
-  padding-bottom: 60px
+  text-align:left
+  padding: 0 0 80px 160px
   @media mq-normal
     display: block
 
