--- a/themes/navy/source/css/_partial/index.styl
+++ b/themes/navy/source/css/_partial/index.styl
@@ -1,5 +1,5 @@
 #banner-outer
-  background-image: url("/images/banner.jpg")
+  background-image: url("/banner.jpg")
 
 #banner
   color: rgba(255, 255, 255, 0.8)
