--- a/source/index.pug
+++ b/source/index.pug
@@ -10,14 +10,14 @@ ul#intro-feature-list
         i.fa.fa-street-view
       h3.intro-feature-title
         a(href='/docs/basic_data_struct.html') Data Struct
-      p.intro-feature-desc Installation, Hello World, Cargo, Crates, Variable bindings, Functions, Primitive Data Types, Operators & Control Flows.
+      p.intro-feature-desc Support for all Geometry types defined in the OGC Simple Features for SQL specification.
   li.intro-feature-wrap
     .intro-feature
       .intro-feature-icon
         i.fa.fa-road
       h3.intro-feature-title
         a(href='/docs/data_conversion.html') Data Conversion
-      p.intro-feature-desc Vectors, Structs, Enums, Generics, Impls & Traits.
+      p.intro-feature-desc Including the conversion between wkt, geojson and geometry.
   li.intro-feature-wrap
     .intro-feature
       .intro-feature-icon
@@ -31,14 +31,14 @@ ul#intro-feature-list
         i.fa.fa-space-shuttle
       h3.intro-feature-title
         a(href='/docs/grid_analysis.html') Grid Analysis
-      p.intro-feature-desc Modules, Crates, Workspaces, std modules and Preludes.
+      p.intro-feature-desc Divide a given area into grids, including square grids and hexagonal grids.
   li.intro-feature-wrap
     .intro-feature
       .intro-feature-icon
         i.fa.fa-user-astronaut
       h3.intro-feature-title
         a(href='/docs/cluster_analysis.html') Cluster Analysis
-      p.intro-feature-desc Smart compiler, Panicking, Option & Result, Unwrap & Expect, Error & None propagation, Combinators and Custom Error Types.
+      p.intro-feature-desc Support K-means, DBSCAN and other clustering algorithms.
   li.intro-feature-wrap
     .intro-feature
       .intro-feature-icon
