--- a/source/zh_CN/index.pug
+++ b/source/zh_CN/index.pug
@@ -1,6 +1,6 @@
 layout: index
 description: Rust Programming Language Tutorials for Everyone.
-subtitle: Geoos
+subtitle: GeoOS
 comments: false
 ---
 ul#intro-feature-list
