add title keywords description

--- a/source/index.pug
+++ b/source/index.pug
@@ -1,5 +1,7 @@
 layout: index
-description: Rust Programming Language Tutorials for Everyone.
+title: GeoOS|spatial intelligence, spatial computing, GeoOS is currently the first open source spatial computing library in China.
+keywords: GeoOS, spatial golang, spatial intelligence, golang geography, golang geographic information, golang domestic, spatial computing, spatial computing open source library.
+description: GeoOS|The first open source spatial project golang, spatial intelligence, golang geography, golang geographic information, golang domestic production, spatial computing, spatial computing open source library, GeoOS is currently the first open source spatial computing library in China.
 subtitle: GeoOS
 comments: false
 ---
