--- a/source/zh_CN/index.pug
+++ b/source/zh_CN/index.pug
@@ -1,5 +1,7 @@
 layout: index
-description: Rust Programming Language Tutorials for Everyone.
+title: GeoOS|空间智能,空间计算，GeoOS是目前国内首个开源基础空间计算库。
+keywords: GeoOS、golang空间、空间智能、golang地理、golang地理信息、golang国产、空间计算、空间计算开源库。
+description: GeoOS|首创开源项目golang空间、空间智能、golang地理、golang地理信息、golang国产、空间计算，空间计算开源库，GeoOS是目前国内首个开源基础空间计算库。
 subtitle: GeoOS
 comments: false
 ---
